--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "@react-latest-ui/react-sticky-notes": "^0.2.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "acron": "^1.0.5",
     "alertifyjs": "^1.13.1",
     "antd": "^5.3.2",
@@ -43,6 +44,7 @@
     "fbjs": "^3.0.5",
     "feather-icons-react": "^0.6.2",
     "file-loader": "^6.2.0",
+    "firebase": "^10.2.0",
     "font-awesome": "^4.7.0",
     "google-map-react": "^2.2.0",
     "google-maps-react": "^2.0.6",
@@ -75,6 +77,7 @@
     "react-feather": "^2.0.10",
     "react-full-screen": "^1.1.1",
     "react-helmet": "^6.1.0",
+    "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.45.0",
     "react-horizontal-timeline": "^1.4.0",
     "react-icons": "^4.8.0",
@@ -88,6 +91,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-photoswipe-gallery": "^2.2.7",
     "react-range": "^1.8.14",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^5.3.4",
     "react-select": "^5.7.2",
     "react-select2-wrapper": "^1.0.4-beta6",
@@ -96,6 +100,7 @@
     "react-stars": "^2.2.5",
     "react-sticky-box": "^2.0.4",
     "react-tag-input-component": "^2.0.2",
+    "redux": "^4.2.1",
     "regenerator-runtime": "^0.13.11",
     "sass-loader": "^12.4.0",
     "select2": "^4.1.0-rc.0",
